sync: latest changes 2026-09-09
